--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "lint": "eslint . --ext .ts --ext .tsx --ext js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "prettier": "prettier src/**/*.ts src/**/*.tsx --write",
@@ -48,8 +49,14 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^6.4.0",
+    "eslint-config-react-app": "^5.0.2",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.3",
     "husky": "3.0.5",
     "lint-staged": "9.4.0",
-    "prettier": "1.18.2"
+    "prettier": "1.18.2",
+    "react-redux-typescript-scripts": "^1.6.2"
   }
 }
