--- a/package.json
+++ b/package.json
@@ -50,13 +50,13 @@
   },
   "devDependencies": {
     "eslint": "^6.4.0",
-    "eslint-config-react-app": "^5.0.2",
-    "eslint-plugin-import": "^2.18.2",
+    "eslint-config-react-app": "5.0.2",
+    "eslint-plugin-import": "2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react": "7.14.3",
     "husky": "3.0.5",
     "lint-staged": "9.4.0",
     "prettier": "1.18.2",
-    "react-redux-typescript-scripts": "^1.6.2"
+    "react-redux-typescript-scripts": "1.6.2"
   }
 }
