--- a/.eslintrc
+++ b/.eslintrc
@@ -24,6 +24,14 @@
     ],
     "object-curly-spacing": [
       "error", "always"
+    ],
+    "indent": [
+      "error",
+      2
+    ],
+    "arrow-parens": [
+      "error",
+      "as-needed"
     ]
   }
 }
