--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,11 @@ node_js:
 cache:
   directories:
     - node_modules
+before_install:
+  - npm install -g codecov
 script:
   - npm test
+  - npm run lint
   - npm run build
 after_success:
   - codecov --token="$CODECOV_TOKEN"
