--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "lint": "eslint . --ext .ts --ext .tsx --ext js",
-    "lint:fix": "eslint . --ext .ts --ext .tsx --ext js --fix",
+    "lint": "eslint './src/**/*.{ts,tsx}'",
+    "lint:fix": "eslint './src/**/*.{ts,tsx}' --fix",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "test:ci": "npm run test -- --no-watch",
@@ -49,7 +49,6 @@
     ]
   },
   "devDependencies": {
-    "codecov": "^3.6.1",
     "eslint-config-prettier": "^6.3.0",
     "eslint-plugin-prettier": "^3.1.1",
     "husky": "3.0.5",
