--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.5.0",
     "@types/jest": "24.0.18",
     "@types/node": "12.7.8",
     "@types/react": "16.9.3",
@@ -15,11 +16,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "lint": "eslint . --ext .ts --ext .tsx --ext js",
-    "lint:fix": "eslint . --ext .ts --ext .tsx --ext js --fix",
+    "lint": "eslint ./src/**/*.{ts,tsx}",
+    "lint:fix": "eslint ./src/**/*.{ts,tsx} --fix",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "prettier": "prettier src/**/*.ts src/**/*.tsx --write",
+    "prettier": "prettier ./src/**/*.{ts,tsx} --write",
     "pre-commit": "lint-staged",
     "eject": "react-scripts eject"
   },
