--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "lib": [
       "dom",
       "dom.iterable",
-      "esnext"
+      "esnext",
+      "es6"
     ],
     "allowJs": true,
     "skipLibCheck": true,
@@ -19,8 +20,8 @@
     "noEmit": true,
     "jsx": "react",
     "noImplicitAny": true,
-    "sourceMap": true,
-    "noImplicitReturns": true
+    "noImplicitThis": true,
+    "strictNullChecks": true
   },
   "include": [
     "src"
