--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ cache:
 before_install:
   - npm install -g codecov
 script:
-  - npm test
+  - npm run test:ci
   - npm run lint
   - npm run build
 after_success:
