--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "dotenv": "^8.1.0",
     "graphql-yoga": "^1.7.0",
     "jsonwebtoken": "^8.2.0",
     "prisma-client-lib": "^1.31.0"
