--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.1",
+    "@apollo/react-testing": "^3.1.1",
     "@buildit/gravity-particles": "^0.3.0",
     "@material-ui/core": "^4.5.0",
     "@types/jest": "24.0.18",
     "@types/node": "12.7.8",
-    "@types/react": "16.9.3",
+    "@types/react": "^16.9.4",
     "@types/react-dom": "16.9.1",
+    "apollo-boost": "^0.4.4",
+    "graphql": "^14.5.8",
     "react": "16.9.0",
     "react-dom": "16.9.0",
     "react-scripts": "3.1.2",
