[BUD-107] Add Cypress CI integration

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint:fix": "eslint ./src/**/*.{ts,tsx} --fix",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "cypress:open": "cypress open",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run",
+    "cy:ci": "start-server-and-test start http://localhost:3000 cy:run",
     "coverage": "npm test -- --coverage --watchAll=false",
     "prettier": "prettier ./src/**/*.{ts,tsx} --write",
     "pre-commit": "lint-staged",
@@ -36,7 +38,8 @@
     "husky": "3.0.5",
     "lint-staged": "9.4.0",
     "prettier": "^1.18.2",
-    "react-test-renderer": "^16.10.1"
+    "react-test-renderer": "^16.10.1",
+    "start-server-and-test": "^1.10.4"
   },
   "lint-staged": {
     "*.{tsx,ts, js}": [
