--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ cache:
 before_install:
   - npm install -g codecov
 script:
+  - npm run cy:ci
   - npm run coverage
   - npm run lint
   - npm run build
