--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,8 @@
 {
   "extends": [
     "react-app",
-    "prettier"
+    "prettier",
+    "plugin:cypress/recommended"
   ],
   "plugins": [
     "prettier"
