--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   "dependencies": {
     "@buildit/gravity-particles": "^0.3.0",
     "@material-ui/core": "^4.5.0",
-    "@types/cypress": "^1.1.3",
     "@types/jest": "24.0.18",
     "@types/node": "12.7.8",
     "@types/react": "16.9.3",
@@ -31,10 +30,10 @@
     "typescript": "3.6.3"
   },
   "devDependencies": {
-    "@bahmutov/add-typescript-to-cypress": "^2.1.2",
     "@types/react-test-renderer": "^16.9.0",
     "cypress": "^3.4.1",
     "eslint-config-prettier": "^6.3.0",
+    "eslint-plugin-cypress": "^2.7.0",
     "eslint-plugin-prettier": "^3.1.1",
     "husky": "3.0.5",
     "lint-staged": "9.4.0",
