--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "typescript": "3.6.3"
   },
   "devDependencies": {
+    "@bahmutov/add-typescript-to-cypress": "^2.1.2",
     "@types/react-test-renderer": "^16.9.0",
     "cypress": "^3.4.1",
     "eslint-config-prettier": "^6.3.0",
