[BUD-107] Add cypress command 'dataTest'

--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../tsconfig.json",
   "include": [
-    "*/*.ts"
+    "*/*.ts", "support/index.js"
   ],
   "compilerOptions": {
     "noEmit": false,
