[BUD-107] Add cypress command 'dataTest'

--- a/.eslintrc
+++ b/.eslintrc
@@ -8,6 +8,7 @@
     "prettier"
   ],
   "rules": {
+    "@typescript-eslint/no-namespace": "off",
     "prettier/prettier": "error",
     "no-console": "error",
     "jsx-quotes": [
