--- a/server/package.json
+++ b/server/package.json
@@ -4,18 +4,21 @@
   "license": "MIT",
   "scripts": {
     "start": "npm run build:live --runInBand",
-    "build:live": "nodemon --watch 'src/**/*.js' --exec node --inspect src/index.js",
-    "prisma": "prisma"
+    "build:live": "tsnd --watch 'src/**/*.ts' --respawn --transpileOnly --inspect -- src/index.ts",
+    "prisma": "prisma",
+    "graphqlgen": "graphqlgen"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.1.0",
     "graphql-yoga": "^1.7.0",
     "jsonwebtoken": "^8.2.0",
-    "prisma-client-lib": "^1.31.0"
+    "prisma": "^1.34.8",
+    "prisma-client-lib": "^1.34.8"
   },
   "devDependencies": {
-    "nodemon": "^1.19.3",
-    "prisma": "^1.31.0"
+    "@types/bcryptjs": "^2.4.2",
+    "@types/jsonwebtoken": "^8.3.4",
+    "ts-node-dev": "^1.0.0-pre.43"
   }
 }
