[BUD-65] change dotenv SECRET to PRISMA_SECRET

--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "start": "npm run build:live --runInBand",
     "build:live": "tsnd --watch 'src/**/*.ts' --respawn --transpileOnly --inspect -- src/index.ts",
-    "prisma": "prisma",
-    "graphqlgen": "graphqlgen"
+    "prisma": "prisma"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
