--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@apollo/react-testing": "^3.1.1",
     "@buildit/gravity-particles": "^0.3.0",
     "@material-ui/core": "^4.5.0",
+    "@material-ui/icons": "^4.5.1",
     "@types/jest": "24.0.18",
     "@types/node": "12.7.8",
     "@types/react": "^16.9.4",
