--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "husky": "3.0.5",
     "lint-staged": "9.4.0",
     "prettier": "^1.18.2",
+    "react-hook-form": "^3.24.0",
     "react-test-renderer": "^16.10.1",
     "start-server-and-test": "^1.10.4"
   },
