--- a/package.json
+++ b/package.json
@@ -39,12 +39,14 @@
   },
   "devDependencies": {
     "@bahmutov/add-typescript-to-cypress": "^2.1.2",
+    "@types/js-cookie": "^2.2.3",
     "@types/react-test-renderer": "^16.9.0",
     "cypress": "^3.4.1",
     "eslint-config-prettier": "^6.3.0",
     "eslint-plugin-cypress": "^2.7.0",
     "eslint-plugin-prettier": "^3.1.1",
     "husky": "3.0.5",
+    "js-cookie": "^2.2.1",
     "lint-staged": "9.4.0",
     "prettier": "^1.18.2",
     "react-hook-form": "^3.24.0",
