--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "prisma": "prisma"
   },
   "dependencies": {
+    "apollo-errors": "^1.9.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.1.0",
     "graphql-yoga": "^1.7.0",
