--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,7 @@
 {
   "extends": [
     "react-app",
-    "prettier",
+    "prettier/@typescript-eslint",
     "plugin:cypress/recommended"
   ],
   "plugins": [
@@ -31,10 +31,6 @@
     "object-curly-spacing": [
       "error",
       "always"
-    ],
-    "indent": [
-      "error",
-      2
     ],
     "arrow-parens": [
       "error",
