--- a/package.json
+++ b/package.json
@@ -53,8 +53,7 @@
     "prettier": "^1.18.2",
     "react-hook-form": "^3.24.0",
     "react-test-renderer": "^16.10.1",
-    "start-server-and-test": "^1.10.4",
-    "wait-for-expect": "^3.0.0"
+    "start-server-and-test": "^1.10.4"
   },
   "lint-staged": {
     "*.{tsx,ts, js}": [
