--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,11 +20,11 @@
     "noEmit": true,
     "jsx": "react",
     "sourceMap": true,
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "noImplicitThis": true,
     "strictNullChecks": true
   },
   "include": [
-    "src"
+    "src/**/*",
   ]
 }
