--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@buildit/gravity-particles": "^0.3.0",
     "@material-ui/core": "^4.5.0",
     "@material-ui/icons": "^4.5.1",
+    "@types/dotenv": "6.1.1",
     "@types/jest": "24.0.18",
     "@types/node": "12.7.8",
     "@types/react": "^16.9.4",
@@ -54,7 +55,8 @@
     "prettier": "^1.18.2",
     "react-hook-form": "^3.24.0",
     "react-test-renderer": "^16.10.1",
-    "start-server-and-test": "^1.10.4"
+    "start-server-and-test": "^1.10.4",
+    "wait-for-expect": "^3.0.0"
   },
   "lint-staged": {
     "*.{tsx,ts, js}": [
