--- a/cypress/tsconfig.json
+++ b/cypress/tsconfig.json
@@ -1,13 +1,13 @@
 {
-  "extends": "../tsconfig.json",
-  "include": [
-    "*/*.ts"
-  ],
   "compilerOptions": {
-    "noEmit": false,
-    "isolatedModules": false,
-    "types": [
-      "cypress"
-    ]
-  }
+    "strict": true,
+    "baseUrl": "../node_modules",
+    "target": "es5",
+    "lib": ["es5", "es2016", "dom"],
+    "types": ["cypress"],
+    "resolveJsonModule": true,
+    "moduleResolution": "node",
+    "esModuleInterop": true
+  },
+  "include": ["**/*.ts"]
 }
