--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/js-cookie": "^2.2.3",
     "@types/react-test-renderer": "^16.9.0",
     "cypress": "^3.4.1",
+    "cypress-graphql-mock": "^0.5.0-alpha.4",
     "eslint-config-prettier": "^6.4.0",
     "eslint-plugin-cypress": "^2.7.0",
     "eslint-plugin-prettier": "^3.1.1",
