--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@types/js-cookie": "^2.2.3",
     "@types/react-test-renderer": "^16.9.0",
     "cypress": "^3.4.1",
+    "graphql-tools": "^4.0.6",
     "eslint-config-prettier": "^6.4.0",
     "eslint-plugin-cypress": "^2.7.0",
     "eslint-plugin-prettier": "^3.1.1",
@@ -56,7 +57,8 @@
     "react-hook-form": "^3.24.0",
     "react-test-renderer": "^16.10.1",
     "start-server-and-test": "^1.10.4",
-    "wait-for-expect": "^3.0.0"
+    "wait-for-expect": "^3.0.0",
+    "webpack-graphql-loader": "^1.0.2"
   },
   "lint-staged": {
     "*.{tsx,ts, js}": [
