--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "react-scripts start",
     "server": "npm start --prefix server",
-    "postinstall": "npm install --prefix server",
+    "postinstall": "npm install --prefix server && npm install --prefix schema",
     "lint": "eslint ./src/**/*.{ts,tsx}",
     "lint:fix": "eslint ./src/**/*.{ts,tsx} --fix",
     "build": "react-scripts build",
@@ -45,11 +45,12 @@
     "@testing-library/react": "^9.3.0",
     "@types/js-cookie": "^2.2.3",
     "@types/react-test-renderer": "^16.9.0",
-    "cypress": "^3.4.1",
-    "graphql-tools": "^4.0.6",
+    "buddy-app-schema": "file:schema",
+    "cypress": "^3.6.1",
     "eslint-config-prettier": "^6.4.0",
     "eslint-plugin-cypress": "^2.7.0",
     "eslint-plugin-prettier": "^3.1.1",
+    "graphql-tools": "^4.0.6",
     "husky": "3.0.5",
     "js-cookie": "^2.2.1",
     "lint-staged": "9.4.0",
