[BUD-202] Coverage updates

--- a/package.json
+++ b/package.json
@@ -96,11 +96,11 @@
     },
     "collectCoverageFrom": [
       "src/**/*.{tsx,ts}",
-      "!src/styles/**/*",
-      "!src/types/**/*",
-      "!src/shared/**/*",
-      "!src/graphql/**/*",
-      "!src/context/**/*",
+      "!src/styles/*",
+      "!src/__mocks__/*",
+      "!src/shared/*",
+      "!src/graphql/*",
+      "!src/context/*",
       "!src/index.tsx",
       "!src/utils/apollo-client.ts",
       "!src/serviceWorker.ts",
