[BUD-202] Create separate npm module for schema and its types (#35)
* [BUD-202] Add schema module as local dep

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "react-scripts start",
     "server": "npm start --prefix server",
-    "postinstall": "npm install --prefix server",
+    "postinstall": "npm install --prefix server && npm install --prefix schema",
     "lint": "eslint ./src/**/*.{ts,tsx}",
     "lint:fix": "eslint ./src/**/*.{ts,tsx} --fix",
     "build": "react-scripts build",
@@ -45,11 +45,12 @@
     "@testing-library/react": "^9.3.0",
     "@types/js-cookie": "^2.2.3",
     "@types/react-test-renderer": "^16.9.0",
+    "buddy-app-schema": "file:schema",
     "cypress": "^3.4.1",
-    "graphql-tools": "^4.0.6",
     "eslint-config-prettier": "^6.4.0",
     "eslint-plugin-cypress": "^2.7.0",
     "eslint-plugin-prettier": "^3.1.1",
+    "graphql-tools": "^4.0.6",
     "husky": "3.0.5",
     "js-cookie": "^2.2.1",
     "lint-staged": "9.4.0",
@@ -95,11 +96,11 @@
     },
     "collectCoverageFrom": [
       "src/**/*.{tsx,ts}",
-      "!src/styles/**/*",
-      "!src/types/**/*",
-      "!src/shared/**/*",
-      "!src/graphql/**/*",
-      "!src/context/**/*",
+      "!src/styles/*",
+      "!src/__mocks__/*",
+      "!src/shared/*",
+      "!src/graphql/*",
+      "!src/context/*",
       "!src/index.tsx",
       "!src/utils/apollo-client.ts",
       "!src/serviceWorker.ts",
