--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "react-dom": "16.9.0",
     "react-html-parser": "^2.0.2",
     "react-router-dom": "5.1.2",
-    "react-scripts": "3.1.2",
+    "react-scripts": "^3.3.0",
     "typescript": "3.6.3"
   },
   "devDependencies": {
