[BUD-211] Error page + refactor on routing and authentication (#51)
* ErrorPage + 404 page added and router refactor

* Unit tests for App component and authorized + unauthorized

* App test mocked componentes and removed unused bootstrap state from auth provider

* Fix new end2end test for new routes

* Removed error boundary component

* Unit tests added to AuthContext refactor

* ErrorPage snapshot test added

* add apollo client local resolvers

* Rename UnauthenticatedApp to NotAuhenticatedApp

* Dictionary added to ErrorPage and Error404 + minor typo on userMenu event

* migration from apollo-link-state to the new version

* authenticated app component unit tests added

* skip routing cypress tests

* Added classname props to pageContainer

* End 2 end tests fixed for routing specs

--- a/package.json
+++ b/package.json
@@ -108,7 +108,7 @@
       "!src/graphql/*",
       "!src/context/*",
       "!src/index.tsx",
-      "!src/utils/apollo-client.ts",
+      "!src/utils/apollo-client/",
       "!src/serviceWorker.ts",
       "!<rootDir>/node_modules/"
     ],
