--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "license": "MIT",
   "scripts": {
     "start": "npm run build:live --runInBand",
+    "start:prod": "tsnd --transpileOnly src/index.ts",
     "build:live": "tsnd --watch 'src/**/*.ts' --respawn --transpileOnly --inspect -- src/index.ts",
     "prisma": "prisma"
   },
