Add acl for public read

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ deploy:
   bucket: "buildit-poland-buddy-app"
   skip_cleanup: true
   local_dir: build
+  acl: public_read
   on:
     # FIXME: Run deploy only on master branch. Left for testing purposes.
     all_branches: true
