--- a/package.json
+++ b/package.json
@@ -35,7 +35,6 @@
     "@types/react-router-dom": "5.1.0",
     "apollo-boost": "^0.4.4",
     "dompurify": "^2.0.7",
-    "graphql": "^14.5.8",
     "react": "16.9.0",
     "react-dom": "16.9.0",
     "react-html-parser": "^2.0.2",
@@ -50,12 +49,14 @@
     "@testing-library/react": "^9.3.0",
     "@types/js-cookie": "^2.2.3",
     "@types/react-test-renderer": "^16.9.0",
+    "apollo-server-lambda": "^2.9.16",
     "buddy-app-schema": "file:schema",
     "clsx": "^1.0.4",
     "cypress": "^3.4.1",
     "eslint-config-prettier": "^6.4.0",
     "eslint-plugin-cypress": "^2.7.0",
     "eslint-plugin-prettier": "^3.1.1",
+    "graphql": "^14.5.8",
     "graphql-tools": "^4.0.6",
     "husky": "3.0.5",
     "js-cookie": "^2.2.1",
