--- a/server/package.json
+++ b/server/package.json
@@ -1,25 +1,35 @@
 {
-  "name": "buddy-app-graphql",
+  "name": "server",
   "version": "1.0.0",
-  "license": "MIT",
+  "description": "Serverless webpack example using Typescript",
+  "main": "handler.js",
   "scripts": {
-    "start": "npm run build:live --runInBand",
-    "build:live": "tsnd --watch 'src/**/*.ts' --respawn --transpileOnly --inspect -- src/index.ts",
-    "prisma": "prisma"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "graphql-yoga": "^1.18.3",
+    "source-map-support": "^0.5.10",
     "apollo-errors": "^1.9.0",
     "bcryptjs": "^2.4.3",
     "buddy-app-schema": "file:../schema",
     "dotenv": "^8.1.0",
-    "graphql-yoga": "^1.7.0",
     "jsonwebtoken": "^8.2.0",
     "prisma": "^1.34.8",
     "prisma-client-lib": "^1.34.8"
   },
   "devDependencies": {
-    "@types/bcryptjs": "^2.4.2",
-    "@types/jsonwebtoken": "^8.3.4",
-    "ts-node-dev": "^1.0.0-pre.43"
-  }
+    "@types/aws-lambda": "^8.10.17",
+    "@types/node": "^10.12.18",
+    "fork-ts-checker-webpack-plugin": "^3.0.1",
+    "serverless": "^1.61.1",
+    "serverless-dotenv-plugin": "^2.1.1",
+    "serverless-offline": "^5.12.1",
+    "serverless-webpack": "^5.2.0",
+    "ts-loader": "^5.3.3",
+    "typescript": "^3.2.4",
+    "webpack": "^4.29.0",
+    "webpack-node-externals": "^1.7.2"
+  },
+  "author": "The serverless webpack authors (https://github.com/elastic-coders/serverless-webpack)",
+  "license": "MIT"
 }
