--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "private": true,
   "scripts": {
     "start": "react-scripts start",
-    "server": "npm start --prefix server",
-    "postinstall": "npm install --prefix server && npm install --prefix schema",
+    "services": "npm start --prefix services",
+    "postinstall": "npm install --prefix services && npm install --prefix schema",
     "lint": "eslint ./src/**/*.{ts,tsx}",
     "lint:fix": "eslint ./src/**/*.{ts,tsx} --fix",
     "build": "react-scripts build",
@@ -40,7 +40,7 @@
     "react-html-parser": "^2.0.2",
     "react-router-dom": "5.1.2",
     "react-scripts": "^3.3.0",
-    "typescript": "3.6.3"
+    "typescript": "^3.7.4"
   },
   "devDependencies": {
     "@bahmutov/add-typescript-to-cypress": "^2.1.2",
