--- a/services/package.json
+++ b/services/package.json
@@ -1,35 +1,34 @@
 {
-  "name": "server",
+  "name": "buddy-app-services",
   "version": "1.0.0",
-  "description": "Serverless webpack example using Typescript",
-  "main": "handler.js",
+  "description": "Buddy app graphql serverless service",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "serverless offline start",
+    "prisma": "prisma"
   },
   "dependencies": {
-    "graphql-yoga": "^1.18.3",
-    "source-map-support": "^0.5.10",
     "apollo-errors": "^1.9.0",
     "bcryptjs": "^2.4.3",
     "buddy-app-schema": "file:../schema",
     "dotenv": "^8.1.0",
+    "graphql": "^14.5.8",
+    "graphql-yoga": "^1.18.3",
     "jsonwebtoken": "^8.2.0",
     "prisma": "^1.34.8",
-    "prisma-client-lib": "^1.34.8"
+    "prisma-client-lib": "^1.34.8",
+    "source-map-support": "^0.5.10",
+    "typescript": "^3.2.4"
   },
   "devDependencies": {
-    "@types/aws-lambda": "^8.10.17",
-    "@types/node": "^10.12.18",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/jsonwebtoken": "^8.3.6",
     "fork-ts-checker-webpack-plugin": "^3.0.1",
     "serverless": "^1.61.1",
     "serverless-dotenv-plugin": "^2.1.1",
     "serverless-offline": "^5.12.1",
     "serverless-webpack": "^5.2.0",
     "ts-loader": "^5.3.3",
-    "typescript": "^3.2.4",
     "webpack": "^4.29.0",
     "webpack-node-externals": "^1.7.2"
-  },
-  "author": "The serverless webpack authors (https://github.com/elastic-coders/serverless-webpack)",
-  "license": "MIT"
+  }
 }
