--- a/schema/package.json
+++ b/schema/package.json
@@ -8,6 +8,7 @@
     "copy": "copyfiles schema.json './src/generated/schema.json' ./build/",
     "codegen": "graphql-codegen",
     "build": "tsc && npm run copy",
+    "postinstall": "npm run build",
     "upgrade": "npm run codegen && npm run build"
   },
   "dependencies": {
