--- a/schema/package.json
+++ b/schema/package.json
@@ -17,7 +17,7 @@
   "devDependencies": {
     "@graphql-codegen/cli": "^1.11.2",
     "@graphql-codegen/introspection": "^1.11.2",
-    "@graphql-codegen/typescript": "1.11.2",
+    "@graphql-codegen/typescript": "^1.11.2",
     "@graphql-codegen/typescript-resolvers": "^1.11.2",
     "typescript": "^3.7.4"
   },
