--- a/services/package.json
+++ b/services/package.json
@@ -3,26 +3,22 @@
   "version": "1.0.0",
   "description": "Buddy app graphql serverless service",
   "scripts": {
-    "start": "serverless offline start",
+    "start": "serverless offline",
     "prisma-generate": "prisma generate",
     "deploy": "serverless deploy",
     "remove": "serverless remove",
     "build": "serverless package",
-    "create-domain": "serverless create_domain",
-    "delete-domain": "serverless delete_domain"
+    "create_domain": "serverless create_domain",
+    "delete_domain": "serverless delete_domain"
   },
   "dependencies": {
     "apollo-errors": "^1.9.0",
     "bcryptjs": "^2.4.3",
     "buddy-app-schema": "file:../schema",
-    "dotenv": "^8.1.0",
-    "graphql": "^14.5.8",
     "graphql-yoga": "^1.18.3",
     "jsonwebtoken": "^8.2.0",
     "prisma": "^1.34.8",
-    "prisma-client-lib": "^1.34.8",
-    "source-map-support": "^0.5.10",
-    "typescript": "^3.2.4"
+    "prisma-client-lib": "^1.34.8"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -35,6 +31,10 @@
     "serverless-webpack": "^5.2.0",
     "ts-loader": "^5.3.3",
     "webpack": "^4.29.0",
-    "webpack-node-externals": "^1.7.2"
+    "webpack-node-externals": "^1.7.2",
+    "dotenv": "^8.1.0",
+    "tslib": "^1.10.0",
+    "typescript": "^3.2.4",
+    "source-map-support": "^0.5.10"
   }
 }
