--- a/services/package.json
+++ b/services/package.json
@@ -23,18 +23,18 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/jsonwebtoken": "^8.3.6",
+    "dotenv": "^8.1.0",
     "fork-ts-checker-webpack-plugin": "^3.0.1",
-    "serverless": "^1.61.1",
+    "serverless": "^1.61.3",
     "serverless-domain-manager": "^3.3.1",
     "serverless-dotenv-plugin": "^2.1.1",
     "serverless-offline": "^5.12.1",
     "serverless-webpack": "^5.2.0",
+    "source-map-support": "^0.5.10",
     "ts-loader": "^5.3.3",
-    "webpack": "^4.29.0",
-    "webpack-node-externals": "^1.7.2",
-    "dotenv": "^8.1.0",
     "tslib": "^1.10.0",
     "typescript": "^3.2.4",
-    "source-map-support": "^0.5.10"
+    "webpack": "^4.29.0",
+    "webpack-node-externals": "^1.7.2"
   }
 }
