--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
     "start": "npm run build:live --runInBand",
     "build:live": "tsnd --watch 'src/**/*.ts' --respawn --transpileOnly --inspect -- src/index.ts",
     "prisma": "prisma",
-    "prisma:seed": "prisma reset && tsnd prisma/seed.ts"
+    "prisma:seed": "prisma seed",
+    "prisma:clean-seed": "prisma reset -f && npm run prisma:seed"
   },
   "dependencies": {
     "apollo-errors": "^1.9.0",
