--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "private": true,
   "scripts": {
     "start": "react-scripts start",
-    "server": "npm start --prefix server",
-    "postinstall": "npm install --prefix server && npm install --prefix schema",
+    "services": "npm start --prefix services",
+    "postinstall": "npm install --prefix services && npm install --prefix schema",
     "lint": "eslint ./src/**/*.{ts,tsx}",
     "lint:fix": "eslint ./src/**/*.{ts,tsx} --fix",
     "build": "react-scripts build",
@@ -25,6 +25,7 @@
     "@buildit/gravity-particles": "^0.3.0",
     "@material-ui/core": "^4.5.0",
     "@material-ui/icons": "^4.5.1",
+    "@material-ui/lab": "^4.0.0-alpha.39",
     "@types/dompurify": "^2.0.0",
     "@types/dotenv": "6.1.1",
     "@types/jest": "24.0.18",
@@ -35,27 +36,27 @@
     "@types/react-router-dom": "5.1.0",
     "apollo-boost": "^0.4.4",
     "dompurify": "^2.0.7",
-    "graphql": "^14.5.8",
     "react": "16.9.0",
     "react-dom": "16.9.0",
     "react-html-parser": "^2.0.2",
     "react-router-dom": "5.1.2",
     "react-scripts": "^3.3.0",
-    "typescript": "3.6.3"
+    "typescript": "^3.7.4"
   },
   "devDependencies": {
     "@bahmutov/add-typescript-to-cypress": "^2.1.2",
-    "@material-ui/lab": "^4.0.0-alpha.33",
     "@testing-library/jest-dom": "^4.1.2",
     "@testing-library/react": "^9.3.0",
     "@types/js-cookie": "^2.2.3",
     "@types/react-test-renderer": "^16.9.0",
+    "apollo-server-lambda": "^2.9.16",
     "buddy-app-schema": "file:schema",
     "clsx": "^1.0.4",
     "cypress": "^3.4.1",
     "eslint-config-prettier": "^6.4.0",
     "eslint-plugin-cypress": "^2.7.0",
     "eslint-plugin-prettier": "^3.1.1",
+    "graphql": "^14.5.8",
     "graphql-tools": "^4.0.6",
     "husky": "3.0.5",
     "js-cookie": "^2.2.1",
