--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@material-ui/lab": "^4.0.0-alpha.33",
     "@testing-library/jest-dom": "^4.1.2",
     "@testing-library/react": "^9.3.0",
+    "@testing-library/react-hooks": "^3.2.1",
     "@types/js-cookie": "^2.2.3",
     "@types/react-test-renderer": "^16.9.0",
     "buddy-app-schema": "file:schema",
@@ -107,7 +108,6 @@
       "!src/shared/*",
       "!src/graphql/*",
       "!src/context/*",
-      "!src/hooks/*",
       "!src/index.tsx",
       "!src/utils/apollo-client/",
       "!src/serviceWorker.ts",
