--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.1",
-    "@apollo/react-testing": "^3.1.1",
     "@buildit/gravity-particles": "^0.3.0",
     "@material-ui/core": "^4.5.0",
     "@material-ui/icons": "^4.5.1",
@@ -45,8 +44,10 @@
   },
   "devDependencies": {
     "@bahmutov/add-typescript-to-cypress": "^2.1.2",
+    "@apollo/react-testing": "^3.1.1",
     "@testing-library/jest-dom": "^4.1.2",
     "@testing-library/react": "^9.3.0",
+    "@testing-library/react-hooks": "^3.2.1",
     "@types/js-cookie": "^2.2.3",
     "@types/react-test-renderer": "^16.9.0",
     "apollo-server-lambda": "^2.9.16",
