Update manifest.json app name

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Buddy App",
-  "name": "Create React App Sample",
+  "name": "Buddy App",
   "icons": [
     {
       "src": "icon-72x72.png",
