--- a/services/package.json
+++ b/services/package.json
@@ -9,7 +9,9 @@
     "remove": "serverless remove",
     "build": "serverless package",
     "create-domain": "serverless create_domain",
-    "delete-domain": "serverless delete_domain"
+    "delete-domain": "serverless delete_domain",
+    "prisma:seed": "prisma seed",
+    "prisma:clean-seed": "prisma reset -f && npm run prisma:seed"
   },
   "dependencies": {
     "apollo-errors": "^1.9.0",
@@ -33,6 +35,7 @@
     "source-map-support": "^0.5.10",
     "ts-loader": "^5.3.3",
     "tslib": "^1.10.0",
+    "ts-node": "8.6.2",
     "typescript": "^3.2.4",
     "webpack": "^4.29.0",
     "webpack-node-externals": "^1.7.2"
