--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,13 @@ cache:
     - node_modules
 before_install:
   - npm install -g codecov
+  - npm install -g @lhci/cli@0.3.x
 script:
   - npm run cy:ci
   - npm run coverage
   - npm run lint
   - npm run build
+  - lhci autorun
 after_success:
   - codecov --token="$CODECOV_TOKEN"
 notifications:
