--- a/services/package.json
+++ b/services/package.json
@@ -20,7 +20,8 @@
     "graphql-yoga": "^1.18.3",
     "jsonwebtoken": "^8.2.0",
     "prisma": "^1.34.8",
-    "prisma-client-lib": "^1.34.8"
+    "prisma-client-lib": "^1.34.8",
+    "typescript": "^3.2.4"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -36,7 +37,6 @@
     "ts-loader": "^5.3.3",
     "tslib": "^1.10.0",
     "ts-node": "8.6.2",
-    "typescript": "^3.2.4",
     "webpack": "^4.29.0",
     "webpack-node-externals": "^1.7.2"
   }
