--- a/services/package.json
+++ b/services/package.json
@@ -20,8 +20,7 @@
     "graphql-yoga": "^1.18.3",
     "jsonwebtoken": "^8.2.0",
     "prisma": "^1.34.8",
-    "prisma-client-lib": "^1.34.8",
-    "typescript": "^3.2.4"
+    "prisma-client-lib": "^1.34.8"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -35,6 +34,7 @@
     "serverless-webpack": "^5.2.0",
     "source-map-support": "^0.5.10",
     "ts-loader": "^5.3.3",
+    "typescript": "^3.2.4",
     "tslib": "^1.10.0",
     "ts-node": "8.6.2",
     "webpack": "^4.29.0",
