CR improvements: - Update README with lighthouse script - Fix problem with lighthouse running /index.html that redirects to /404 - Don't run lighthouse globally on CI -> use dev dependencies

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,13 +11,12 @@ cache:
     - node_modules
 before_install:
   - npm install -g codecov
-  - npm install -g @lhci/cli@0.3.x
 script:
   - npm run cy:ci
   - npm run coverage
   - npm run lint
   - npm run build
-  - lhci autorun
+  - npm run lighthouse
 after_success:
   - codecov --token="$CODECOV_TOKEN"
 notifications:
