--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "coverage": "npm test -- --coverage --watchAll=false",
     "prettier": "prettier ./src/**/*.{ts,tsx} --write",
     "pre-commit": "lint-staged",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lighthouse": "lhci autorun"
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.1",
@@ -43,8 +44,9 @@
     "typescript": "^3.7.4"
   },
   "devDependencies": {
-    "@bahmutov/add-typescript-to-cypress": "^2.1.2",
     "@apollo/react-testing": "^3.1.1",
+    "@bahmutov/add-typescript-to-cypress": "^2.1.2",
+    "@lhci/cli": "^0.3.8",
     "@testing-library/jest-dom": "^4.1.2",
     "@testing-library/react": "^9.3.0",
     "@testing-library/react-hooks": "^3.2.1",
