Add LightHouse to CI/CD pipeline (#64)
* Setup basic lighthouse ci for travis

* Setup lighthouserc.json

* Setup warnings

* Reformat lighthouserc.json

* Extend lighthouserc.json

* CR improvements:
- Update README with lighthouse script
- Fix problem with lighthouse running /index.html that redirects to /404
- Don't run lighthouse globally on CI -> use dev dependencies

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ script:
   - npm run coverage
   - npm run lint
   - npm run build
+  - npm run lighthouse
 after_success:
   - codecov --token="$CODECOV_TOKEN"
 notifications:
