--- a/services/package.json
+++ b/services/package.json
@@ -17,6 +17,7 @@
     "apollo-errors": "^1.9.0",
     "bcryptjs": "^2.4.3",
     "buddy-app-schema": "file:../schema",
+    "graphql": "^14.6.0",
     "graphql-yoga": "^1.18.3",
     "jsonwebtoken": "^8.2.0",
     "prisma": "^1.34.8",
