--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "react-scripts test",
     "cy:open": "cypress open",
     "cy:run": "cypress run --browser chrome",
-    "cy:ci": "start-server-and-test start http://localhost:3000 cy:run",
+    "cy:ci": "REACT_APP_SERVER_URL= start-test 3000 cy:run",
     "coverage": "npm test -- --coverage --watchAll=false",
     "prettier": "prettier ./src/**/*.{ts,tsx} --write",
     "pre-commit": "lint-staged",
