--- a/package.json
+++ b/package.json
@@ -26,14 +26,6 @@
     "@material-ui/core": "^4.5.0",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.39",
-    "@types/dompurify": "^2.0.0",
-    "@types/dotenv": "6.1.1",
-    "@types/jest": "24.0.18",
-    "@types/node": "12.7.8",
-    "@types/react": "^16.9.4",
-    "@types/react-dom": "16.9.1",
-    "@types/react-html-parser": "^2.0.1",
-    "@types/react-router-dom": "5.1.0",
     "apollo-boost": "^0.4.4",
     "dompurify": "^2.0.7",
     "react": "16.9.0",
@@ -52,6 +44,15 @@
     "@testing-library/react-hooks": "^3.2.1",
     "@types/js-cookie": "^2.2.3",
     "@types/react-test-renderer": "^16.9.0",
+    "@types/dompurify": "^2.0.0",
+    "@types/dotenv": "6.1.1",
+    "@types/jest": "24.0.18",
+    "@types/lodash": "^4.14.149",
+    "@types/node": "12.7.8",
+    "@types/react": "^16.9.4",
+    "@types/react-dom": "16.9.1",
+    "@types/react-html-parser": "^2.0.1",
+    "@types/react-router-dom": "5.1.0",
     "apollo-server-lambda": "^2.9.16",
     "buddy-app-schema": "file:schema",
     "clsx": "^1.0.4",
