--- a/.travis.yml
+++ b/.travis.yml
@@ -22,18 +22,18 @@ after_success:
 notifications:
   slack: $SLACK_TOKEN
 deploy:
-  provider: s3
-  access_key_id: $AWS_ACCESS_KEY
-  secret_access_key: $AWS_SECRET_ACCESS_KEY
-  bucket: "buildit-poland-buddy-app"
-  skip_cleanup: true
-  region: eu-west-1
-  local_dir: build
-  acl: public_read
-  on:
-    branch: master
+  - provider: s3
+    access_key_id: $AWS_ACCESS_KEY
+    secret_access_key: $AWS_SECRET_ACCESS_KEY
+    bucket: "buildit-poland-buddy-app"
+    skip_cleanup: true
+    region: eu-west-1
+    local_dir: build
+    acl: public_read
+    on:
+      branch: master
   # deploy services
-  provider: script
-  script: bash services/deploy.sh prod
-  on:
-    branch: master
+  - provider: script
+    script: bash services/deploy.sh prod
+    on:
+      branch: master
