Update travis.yml add skip_cleanup for be deploymnet

--- a/.travis.yml
+++ b/.travis.yml
@@ -35,5 +35,6 @@ deploy:
   # deploy services
   - provider: script
     script: bash services/deploy.sh prod
+    skip_cleanup: true
     on:
       branch: master
