--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -20,7 +20,8 @@
     "coverage": "npm test -- --coverage --watchAll=false",
     "prettier": "prettier ./src/**/*.{ts,tsx} --write",
     "eject": "react-scripts eject",
-    "lighthouse": "lhci autorun"
+    "lighthouse": "lhci autorun",
+    "precommit": "lint-staged"
   },
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
@@ -64,6 +65,7 @@
     "graphql": "^14.6.0",
     "graphql-tools": "^4.0.6",
     "js-cookie": "^2.2.1",
+    "lint-staged": "^10.0.7",
     "prettier": "^1.19.1",
     "react-hook-form": "^4.9.3",
     "react-test-renderer": "^16.12.0",
@@ -71,6 +73,12 @@
     "wait-for-expect": "^3.0.2",
     "webpack": "^4.41.6",
     "webpack-graphql-loader": "^1.0.2"
+  },
+  "lint-staged": {
+    "*.{tsx,ts, js}": [
+      "yarn lint:fix",
+      "yarn prettier"
+    ]
   },
   "browserslist": {
     "production": [
