--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lerna run --concurrency 1 --stream precommit"
+      "pre-commit": "lerna run --parallel --stream precommit"
     }
   },
   "devDependencies": {
