--- a/services/package.json
+++ b/services/package.json
@@ -4,6 +4,7 @@
   "description": "Buddy app graphql serverless service",
   "scripts": {
     "start": "serverless offline",
+    "debug": "node --inspect node_modules/serverless/bin/serverless offline -s dev",
     "prisma-generate": "prisma generate",
     "deploy": "serverless deploy",
     "remove": "serverless remove",
